rename candidate to teammate
